y.output

state 0
	$accept: .any_command $end 

	SELECT  shift 18
	INSERT  shift 37
	UPDATE  shift 20
	DELETE  shift 21
	DESC  shift 30
	SET  shift 22
	USE  shift 29
	'('  shift 39
	CREATE  shift 23
	ALTER  shift 24
	DROP  shift 26
	RENAME  shift 25
	ANALYZE  shift 27
	SHOW  shift 28
	DESCRIBE  shift 31
	EXPLAIN  shift 32
	REPAIR  shift 33
	OPTIMIZE  shift 34
	TRUNCATE  shift 35
	REPLACE  shift 38
	.  error

	command  goto 2
	select_statement  goto 3
	base_select  goto 16
	union_lhs  goto 17
	insert_statement  goto 4
	update_statement  goto 5
	delete_statement  goto 6
	set_statement  goto 7
	create_statement  goto 8
	alter_statement  goto 9
	rename_statement  goto 10
	drop_statement  goto 11
	analyze_statement  goto 12
	show_statement  goto 13
	use_statement  goto 14
	other_statement  goto 15
	insert_or_replace  goto 19
	any_command  goto 1
	openb  goto 36

state 1
	$accept:  any_command.$end 

	$end  accept
	.  error


state 2
	any_command:  command.semicolon_opt 
	semicolon_opt: .    (2)

	';'  shift 41
	.  reduce 2 (src line 223)

	semicolon_opt  goto 40

state 3
	command:  select_statement.    (4)
	union_lhs:  select_statement.    (21)

	UNION  reduce 21 (src line 271)
	.  reduce 4 (src line 227)


state 4
	command:  insert_statement.    (5)

	.  reduce 5 (src line 232)


state 5
	command:  update_statement.    (6)

	.  reduce 6 (src line 233)


state 6
	command:  delete_statement.    (7)

	.  reduce 7 (src line 234)


state 7
	command:  set_statement.    (8)

	.  reduce 8 (src line 235)


state 8
	command:  create_statement.    (9)

	.  reduce 9 (src line 236)


state 9
	command:  alter_statement.    (10)

	.  reduce 10 (src line 237)


state 10
	command:  rename_statement.    (11)

	.  reduce 11 (src line 238)


state 11
	command:  drop_statement.    (12)

	.  reduce 12 (src line 239)


state 12
	command:  analyze_statement.    (13)

	.  reduce 13 (src line 240)


state 13
	command:  show_statement.    (14)

	.  reduce 14 (src line 241)


state 14
	command:  use_statement.    (15)

	.  reduce 15 (src line 242)


state 15
	command:  other_statement.    (16)

	.  reduce 16 (src line 243)


state 16
	select_statement:  base_select.order_by_opt limit_opt lock_opt 
	order_by_opt: .    (272)

	ORDER  shift 43
	.  reduce 272 (src line 1452)

	order_by_opt  goto 42

state 17
	select_statement:  union_lhs.union_op union_rhs order_by_opt limit_opt lock_opt 

	UNION  shift 45
	.  error

	union_op  goto 44

state 18
	select_statement:  SELECT.comment_opt cache_opt NEXT num_val for_from table_name 
	base_select:  SELECT.comment_opt cache_opt distinct_opt straight_join_opt select_expression_list from_opt where_expression_opt group_by_opt having_opt 
	$$61: .    (61)

	.  reduce 61 (src line 492)

	comment_opt  goto 46
	$$61  goto 47

state 19
	insert_statement:  insert_or_replace.comment_opt ignore_opt into_table_name insert_data on_dup_opt 
	insert_statement:  insert_or_replace.comment_opt ignore_opt into_table_name SET update_list on_dup_opt 
	$$61: .    (61)

	.  reduce 61 (src line 492)

	comment_opt  goto 48
	$$61  goto 47

state 20
	update_statement:  UPDATE.comment_opt table_references SET update_list where_expression_opt order_by_opt limit_opt 
	$$61: .    (61)

	.  reduce 61 (src line 492)

	comment_opt  goto 49
	$$61  goto 47

state 21
	delete_statement:  DELETE.comment_opt FROM table_name where_expression_opt order_by_opt limit_opt 
	delete_statement:  DELETE.comment_opt table_name_list from_or_using table_references where_expression_opt 
	$$61: .    (61)

	.  reduce 61 (src line 492)

	comment_opt  goto 50
	$$61  goto 47

state 22
	set_statement:  SET.comment_opt update_list 
	$$61: .    (61)

	.  reduce 61 (src line 492)

	comment_opt  goto 51
	$$61  goto 47

state 23
	create_statement:  CREATE.TABLE not_exists_opt table_name ddl_force_eof 
	create_statement:  CREATE.constraint_opt INDEX ID using_opt ON table_name ddl_force_eof 
	create_statement:  CREATE.VIEW table_name ddl_force_eof 
	create_statement:  CREATE.OR REPLACE VIEW table_name ddl_force_eof 
	constraint_opt: .    (328)

	OFFSET  shift 67
	DUPLICATE  shift 62
	LAST_INSERT_ID  shift 75
	SHARE  shift 71
	MODE  shift 66
	ID  shift 58
	OR  shift 55
	TABLE  shift 52
	VIEW  shift 54
	UNIQUE  shift 56
	DATE  shift 61
	REPAIR  shift 70
	OPTIMIZE  shift 68
	TRUNCATE  shift 72
	INTEGER  shift 64
	AGAINST  shift 60
	LANGUAGE  shift 65
	WITH  shift 74
	QUERY  shift 69
	EXPANSION  shift 63
	UNUSED  shift 73
	.  reduce 328 (src line 1682)

	constraint_opt  goto 53
	non_reserved_keyword  goto 59
	sql_id  goto 57

state 24
	alter_statement:  ALTER.ignore_opt TABLE table_name non_rename_operation force_eof 
	alter_statement:  ALTER.ignore_opt TABLE table_name RENAME to_opt table_name 
	alter_statement:  ALTER.ignore_opt TABLE table_name RENAME index_opt force_eof 
	alter_statement:  ALTER.VIEW table_name ddl_force_eof 
	ignore_opt: .    (314)

	VIEW  shift 77
	IGNORE  shift 78
	.  reduce 314 (src line 1648)

	ignore_opt  goto 76

state 25
	rename_statement:  RENAME.TABLE table_name TO table_name 

	TABLE  shift 79
	.  error


state 26
	drop_statement:  DROP.TABLE exists_opt table_name 
	drop_statement:  DROP.INDEX ID ON table_name 
	drop_statement:  DROP.VIEW exists_opt table_name ddl_force_eof 

	TABLE  shift 80
	INDEX  shift 81
	VIEW  shift 82
	.  error


state 27
	analyze_statement:  ANALYZE.TABLE table_name 

	TABLE  shift 83
	.  error


state 28
	show_statement:  SHOW.show_statement_type force_eof 

	UNION  shift 168
	SELECT  shift 155
	INSERT  shift 129
	UPDATE  shift 170
	DELETE  shift 107
	FROM  shift 121
	WHERE  shift 178
	GROUP  shift 122
	HAVING  shift 123
	ORDER  shift 149
	BY  shift 95
	LIMIT  shift 137
	OFFSET  shift 67
	FOR  shift 119
	ALL  shift 88
	ANY  shift 90
	DISTINCT  shift 110
	AS  shift 91
	EXISTS  shift 116
	ASC  shift 92
	DESC  shift 108
	INTO  shift 131
	DUPLICATE  shift 62
	KEY  shift 134
	DEFAULT  shift 106
	SET  shift 157
	LOCK  shift 140
	VALUES  shift 176
	LAST_INSERT_ID  shift 75
	NEXT  shift 144
	SHARE  shift 71
	MODE  shift 66
	JOIN  shift 133
	STRAIGHT_JOIN  shift 162
	LEFT  shift 135
	RIGHT  shift 154
	INNER  shift 128
	OUTER  shift 150
	CROSS  shift 100
	NATURAL  shift 143
	USE  shift 171
	FORCE  shift 120
	ON  shift 147
	ID  shift 85
	NULL  shift 146
	TRUE  shift 167
	FALSE  shift 118
	OR  shift 148
	AND  shift 89
	NOT  shift 145
	BETWEEN  shift 93
	CASE  shift 96
	WHEN  shift 177
	THEN  shift 165
	ELSE  shift 113
	END  shift 114
	IS  shift 132
	LIKE  shift 136
	REGEXP  shift 151
	IN  shift 126
	DIV  shift 111
	MOD  shift 142
	COLLATE  shift 97
	BINARY  shift 94
	INTERVAL  shift 130
	CREATE  shift 99
	DROP  shift 112
	RENAME  shift 152
	TABLE  shift 163
	INDEX  shift 127
	VIEW  shift 179
	TO  shift 166
	IGNORE  shift 125
	IF  shift 124
	UNIQUE  shift 169
	USING  shift 172
	SHOW  shift 161
	DESCRIBE  shift 109
	EXPLAIN  shift 117
	DATE  shift 61
	ESCAPE  shift 115
	REPAIR  shift 70
	OPTIMIZE  shift 68
	TRUNCATE  shift 72
	DATABASES  shift 105
	TABLES  shift 164
	VITESS_KEYSPACES  shift 158
	VITESS_SHARDS  shift 159
	VSCHEMA_TABLES  shift 160
	INTEGER  shift 64
	CURRENT_TIMESTAMP  shift 103
	DATABASE  shift 104
	CURRENT_DATE  shift 101
	CURRENT_TIME  shift 102
	LOCALTIME  shift 138
	LOCALTIMESTAMP  shift 139
	UTC_DATE  shift 173
	UTC_TIME  shift 174
	UTC_TIMESTAMP  shift 175
	REPLACE  shift 153
	CONVERT  shift 98
	SEPARATOR  shift 156
	MATCH  shift 141
	AGAINST  shift 60
	LANGUAGE  shift 65
	WITH  shift 74
	QUERY  shift 69
	EXPANSION  shift 63
	UNUSED  shift 73
	.  error

	reserved_keyword  goto 86
	non_reserved_keyword  goto 87
	show_statement_type  goto 84

state 29
	use_statement:  USE.table_id 

	OFFSET  shift 67
	DUPLICATE  shift 62
	LAST_INSERT_ID  shift 75
	SHARE  shift 71
	MODE  shift 66
	ID  shift 181
	VIEW  shift 179
	DATE  shift 61
	REPAIR  shift 70
	OPTIMIZE  shift 68
	TRUNCATE  shift 72
	INTEGER  shift 64
	AGAINST  shift 60
	LANGUAGE  shift 65
	WITH  shift 74
	QUERY  shift 69
	EXPANSION  shift 63
	UNUSED  shift 73
	.  error

	non_reserved_keyword  goto 182
	table_id  goto 180

state 30
	other_statement:  DESC.force_eof 
	force_eof: .    (451)

	.  reduce 451 (src line 1870)

	force_eof  goto 183

state 31
	other_statement:  DESCRIBE.force_eof 
	force_eof: .    (451)

	.  reduce 451 (src line 1870)

	force_eof  goto 184

state 32
	other_statement:  EXPLAIN.force_eof 
	force_eof: .    (451)

	.  reduce 451 (src line 1870)

	force_eof  goto 185

state 33
	other_statement:  REPAIR.force_eof 
	force_eof: .    (451)

	.  reduce 451 (src line 1870)

	force_eof  goto 186

state 34
	other_statement:  OPTIMIZE.force_eof 
	force_eof: .    (451)

	.  reduce 451 (src line 1870)

	force_eof  goto 187

state 35
	other_statement:  TRUNCATE.force_eof 
	force_eof: .    (451)

	.  reduce 451 (src line 1870)

	force_eof  goto 188

state 36
	union_lhs:  openb.select_statement closeb 

	SELECT  shift 18
	'('  shift 39
	.  error

	select_statement  goto 189
	base_select  goto 16
	union_lhs  goto 17
	openb  goto 36

state 37
	insert_or_replace:  INSERT.    (27)

	.  reduce 27 (src line 315)


state 38
	insert_or_replace:  REPLACE.    (28)

	.  reduce 28 (src line 320)


state 39
	openb:  '('.    (449)

	.  reduce 449 (src line 1855)


state 40
	any_command:  command semicolon_opt.    (1)

	.  reduce 1 (src line 217)


state 41
	semicolon_opt:  ';'.    (3)

	.  reduce 3 (src line 225)


state 42
	select_statement:  base_select order_by_opt.limit_opt lock_opt 
	limit_opt: .    (280)

	LIMIT  shift 191
	.  reduce 280 (src line 1490)

	limit_opt  goto 190

state 43
	order_by_opt:  ORDER.BY order_list 

	BY  shift 192
	.  error


state 44
	select_statement:  union_lhs union_op.union_rhs order_by_opt limit_opt lock_opt 

	SELECT  shift 196
	'('  shift 39
	.  error

	base_select  goto 194
	union_rhs  goto 193
	openb  goto 195

state 45
	union_op:  UNION.    (65)
	union_op:  UNION.ALL 
	union_op:  UNION.DISTINCT 

	ALL  shift 197
	DISTINCT  shift 198
	.  reduce 65 (src line 511)


state 46
	select_statement:  SELECT comment_opt.cache_opt NEXT num_val for_from table_name 
	base_select:  SELECT comment_opt.cache_opt distinct_opt straight_join_opt select_expression_list from_opt where_expression_opt group_by_opt having_opt 
	cache_opt: .    (68)

	SQL_NO_CACHE  shift 200
	SQL_CACHE  shift 201
	.  reduce 68 (src line 525)

	cache_opt  goto 199

state 47
	comment_opt:  $$61.comment_list 
	comment_list: .    (63)

	.  reduce 63 (src line 502)

	comment_list  goto 202

state 48
	insert_statement:  insert_or_replace comment_opt.ignore_opt into_table_name insert_data on_dup_opt 
	insert_statement:  insert_or_replace comment_opt.ignore_opt into_table_name SET update_list on_dup_opt 
	ignore_opt: .    (314)

	IGNORE  shift 78
	.  reduce 314 (src line 1648)

	ignore_opt  goto 203

state 49
	update_statement:  UPDATE comment_opt.table_references SET update_list where_expression_opt order_by_opt limit_opt 

	OFFSET  shift 67
	DUPLICATE  shift 62
	LAST_INSERT_ID  shift 75
	SHARE  shift 71
	MODE  shift 66
	'('  shift 39
	ID  shift 181
	VIEW  shift 179
	DATE  shift 61
	REPAIR  shift 70
	OPTIMIZE  shift 68
	TRUNCATE  shift 72
	INTEGER  shift 64
	AGAINST  shift 60
	LANGUAGE  shift 65
	WITH  shift 74
	QUERY  shift 69
	EXPANSION  shift 63
	UNUSED  shift 73
	.  error

	table_references  goto 204
	table_reference  goto 205
	table_factor  goto 206
	join_table  goto 207
	table_name  goto 211
	aliased_table_name  goto 208
	subquery  goto 209
	non_reserved_keyword  goto 182
	table_id  goto 212
	openb  goto 210

state 50
	delete_statement:  DELETE comment_opt.FROM table_name where_expression_opt order_by_opt limit_opt 
	delete_statement:  DELETE comment_opt.table_name_list from_or_using table_references where_expression_opt 

	FROM  shift 213
	OFFSET  shift 67
	DUPLICATE  shift 62
	LAST_INSERT_ID  shift 75
	SHARE  shift 71
	MODE  shift 66
	ID  shift 181
	VIEW  shift 179
	DATE  shift 61
	REPAIR  shift 70
	OPTIMIZE  shift 68
	TRUNCATE  shift 72
	INTEGER  shift 64
	AGAINST  shift 60
	LANGUAGE  shift 65
	WITH  shift 74
	QUERY  shift 69
	EXPANSION  shift 63
	UNUSED  shift 73
	.  error

	table_name_list  goto 214
	table_name  goto 215
	non_reserved_keyword  goto 182
	table_id  goto 212

state 51
	set_statement:  SET comment_opt.update_list 

	OFFSET  shift 67
	DUPLICATE  shift 62
	LAST_INSERT_ID  shift 75
	SHARE  shift 71
	MODE  shift 66
	ID  shift 221
	VIEW  shift 179
	DATE  shift 61
	REPAIR  shift 70
	OPTIMIZE  shift 68
	TRUNCATE  shift 72
	INTEGER  shift 64
	AGAINST  shift 60
	LANGUAGE  shift 65
	WITH  shift 74
	QUERY  shift 69
	EXPANSION  shift 63
	UNUSED  shift 73
	.  error

	column_name  goto 218
	update_list  goto 216
	update_expression  goto 217
	non_reserved_keyword  goto 222
	sql_id  goto 219
	table_id  goto 220

state 52
	create_statement:  CREATE TABLE.not_exists_opt table_name ddl_force_eof 
	not_exists_opt: .    (312)

	IF  shift 224
	.  reduce 312 (src line 1643)

	not_exists_opt  goto 223

state 53
	create_statement:  CREATE constraint_opt.INDEX ID using_opt ON table_name ddl_force_eof 

	INDEX  shift 225
	.  error


state 54
	create_statement:  CREATE VIEW.table_name ddl_force_eof 
	non_reserved_keyword:  VIEW.    (446)

	OFFSET  shift 67
	DUPLICATE  shift 62
	LAST_INSERT_ID  shift 75
	SHARE  shift 71
	MODE  shift 66
	ID  shift 181
	VIEW  shift 179
	DATE  shift 61
	REPAIR  shift 70
	OPTIMIZE  shift 68
	TRUNCATE  shift 72
	INTEGER  shift 64
	AGAINST  shift 60
	LANGUAGE  shift 65
	WITH  shift 74
	QUERY  shift 69
	EXPANSION  shift 63
	UNUSED  shift 73
	.  reduce 446 (src line 1851)

	table_name  goto 226
	non_reserved_keyword  goto 182
	table_id  goto 212

state 55
	create_statement:  CREATE OR.REPLACE VIEW table_name ddl_force_eof 

	REPLACE  shift 227
	.  error


state 56
	constraint_opt:  UNIQUE.    (329)

	.  reduce 329 (src line 1684)


state 57
	constraint_opt:  sql_id.    (330)

	.  reduce 330 (src line 1686)


state 58
	sql_id:  ID.    (333)

	.  reduce 333 (src line 1694)


state 59
	sql_id:  non_reserved_keyword.    (334)

	.  reduce 334 (src line 1699)


state 60
	non_reserved_keyword:  AGAINST.    (432)

	.  reduce 432 (src line 1836)


state 61
	non_reserved_keyword:  DATE.    (433)

	.  reduce 433 (src line 1838)


state 62
	non_reserved_keyword:  DUPLICATE.    (434)

	.  reduce 434 (src line 1839)


state 63
	non_reserved_keyword:  EXPANSION.    (435)

	.  reduce 435 (src line 1840)


state 64
	non_reserved_keyword:  INTEGER.    (436)

	.  reduce 436 (src line 1841)


state 65
	non_reserved_keyword:  LANGUAGE.    (437)

	.  reduce 437 (src line 1842)


state 66
	non_reserved_keyword:  MODE.    (438)

	.  reduce 438 (src line 1843)


state 67
	non_reserved_keyword:  OFFSET.    (439)

	.  reduce 439 (src line 1844)


state 68
	non_reserved_keyword:  OPTIMIZE.    (440)

	.  reduce 440 (src line 1845)


state 69
	non_reserved_keyword:  QUERY.    (441)

	.  reduce 441 (src line 1846)


state 70
	non_reserved_keyword:  REPAIR.    (442)

	.  reduce 442 (src line 1847)


state 71
	non_reserved_keyword:  SHARE.    (443)

	.  reduce 443 (src line 1848)


state 72
	non_reserved_keyword:  TRUNCATE.    (444)

	.  reduce 444 (src line 1849)


state 73
	non_reserved_keyword:  UNUSED.    (445)

	.  reduce 445 (src line 1850)


state 74
	non_reserved_keyword:  WITH.    (447)

	.  reduce 447 (src line 1852)


state 75
	non_reserved_keyword:  LAST_INSERT_ID.    (448)

	.  reduce 448 (src line 1853)


state 76
	alter_statement:  ALTER ignore_opt.TABLE table_name non_rename_operation force_eof 
	alter_statement:  ALTER ignore_opt.TABLE table_name RENAME to_opt table_name 
	alter_statement:  ALTER ignore_opt.TABLE table_name RENAME index_opt force_eof 

	TABLE  shift 228
	.  error


state 77
	alter_statement:  ALTER VIEW.table_name ddl_force_eof 

	OFFSET  shift 67
	DUPLICATE  shift 62
	LAST_INSERT_ID  shift 75
	SHARE  shift 71
	MODE  shift 66
	ID  shift 181
	VIEW  shift 179
	DATE  shift 61
	REPAIR  shift 70
	OPTIMIZE  shift 68
	TRUNCATE  shift 72
	INTEGER  shift 64
	AGAINST  shift 60
	LANGUAGE  shift 65
	WITH  shift 74
	QUERY  shift 69
	EXPANSION  shift 63
	UNUSED  shift 73
	.  error

	table_name  goto 229
	non_reserved_keyword  goto 182
	table_id  goto 212

state 78
	ignore_opt:  IGNORE.    (315)

	.  reduce 315 (src line 1650)


state 79
	rename_statement:  RENAME TABLE.table_name TO table_name 

	OFFSET  shift 67
	DUPLICATE  shift 62
	LAST_INSERT_ID  shift 75
	SHARE  shift 71
	MODE  shift 66
	ID  shift 181
	VIEW  shift 179
	DATE  shift 61
	REPAIR  shift 70
	OPTIMIZE  shift 68
	TRUNCATE  shift 72
	INTEGER  shift 64
	AGAINST  shift 60
	LANGUAGE  shift 65
	WITH  shift 74
	QUERY  shift 69
	EXPANSION  shift 63
	UNUSED  shift 73
	.  error

	table_name  goto 230
	non_reserved_keyword  goto 182
	table_id  goto 212

state 80
	drop_statement:  DROP TABLE.exists_opt table_name 
	exists_opt: .    (310)

	IF  shift 232
	.  reduce 310 (src line 1638)

	exists_opt  goto 231

state 81
	drop_statement:  DROP INDEX.ID ON table_name 

	ID  shift 233
	.  error


state 82
	drop_statement:  DROP VIEW.exists_opt table_name ddl_force_eof 
	exists_opt: .    (310)

	IF  shift 232
	.  reduce 310 (src line 1638)

	exists_opt  goto 234

state 83
	analyze_statement:  ANALYZE TABLE.table_name 

	OFFSET  shift 67
	DUPLICATE  shift 62
	LAST_INSERT_ID  shift 75
	SHARE  shift 71
	MODE  shift 66
	ID  shift 181
	VIEW  shift 179
	DATE  shift 61
	REPAIR  shift 70
	OPTIMIZE  shift 68
	TRUNCATE  shift 72
	INTEGER  shift 64
	AGAINST  shift 60
	LANGUAGE  shift 65
	WITH  shift 74
	QUERY  shift 69
	EXPANSION  shift 63
	UNUSED  shift 73
	.  error

	table_name  goto 235
	non_reserved_keyword  goto 182
	table_id  goto 212

state 84
	show_statement:  SHOW show_statement_type.force_eof 
	force_eof: .    (451)

	.  reduce 451 (src line 1870)

	force_eof  goto 236

state 85
	show_statement_type:  ID.    (50)

	.  reduce 50 (src line 435)


state 86
	show_statement_type:  reserved_keyword.    (51)

	.  reduce 51 (src line 440)


state 87
	show_statement_type:  non_reserved_keyword.    (52)

	.  reduce 52 (src line 449)


state 88
	reserved_keyword:  ALL.    (341)

	.  reduce 341 (src line 1736)


state 89
	reserved_keyword:  AND.    (342)

	.  reduce 342 (src line 1738)


state 90
	reserved_keyword:  ANY.    (343)

	.  reduce 343 (src line 1739)


state 91
	reserved_keyword:  AS.    (344)

	.  reduce 344 (src line 1740)


state 92
	reserved_keyword:  ASC.    (345)

	.  reduce 345 (src line 1741)


state 93
	reserved_keyword:  BETWEEN.    (346)

	.  reduce 346 (src line 1742)


state 94
	reserved_keyword:  BINARY.    (347)

	.  reduce 347 (src line 1743)


state 95
	reserved_keyword:  BY.    (348)

	.  reduce 348 (src line 1744)


state 96
	reserved_keyword:  CASE.    (349)

	.  reduce 349 (src line 1745)


state 97
	reserved_keyword:  COLLATE.    (350)

	.  reduce 350 (src line 1746)


state 98
	reserved_keyword:  CONVERT.    (351)

	.  reduce 351 (src line 1747)


state 99
	reserved_keyword:  CREATE.    (352)

	.  reduce 352 (src line 1748)


state 100
	reserved_keyword:  CROSS.    (353)

	.  reduce 353 (src line 1749)


state 101
	reserved_keyword:  CURRENT_DATE.    (354)

	.  reduce 354 (src line 1750)


state 102
	reserved_keyword:  CURRENT_TIME.    (355)

	.  reduce 355 (src line 1751)


state 103
	reserved_keyword:  CURRENT_TIMESTAMP.    (356)

	.  reduce 356 (src line 1752)


state 104
	reserved_keyword:  DATABASE.    (357)

	.  reduce 357 (src line 1753)


state 105
	reserved_keyword:  DATABASES.    (358)

	.  reduce 358 (src line 1754)


state 106
	reserved_keyword:  DEFAULT.    (359)

	.  reduce 359 (src line 1755)


state 107
	reserved_keyword:  DELETE.    (360)

	.  reduce 360 (src line 1756)


state 108
	reserved_keyword:  DESC.    (361)

	.  reduce 361 (src line 1757)


state 109
	reserved_keyword:  DESCRIBE.    (362)

	.  reduce 362 (src line 1758)


state 110
	reserved_keyword:  DISTINCT.    (363)

	.  reduce 363 (src line 1759)


state 111
	reserved_keyword:  DIV.    (364)

	.  reduce 364 (src line 1760)


state 112
	reserved_keyword:  DROP.    (365)

	.  reduce 365 (src line 1761)


state 113
	reserved_keyword:  ELSE.    (366)

	.  reduce 366 (src line 1762)


state 114
	reserved_keyword:  END.    (367)

	.  reduce 367 (src line 1763)


state 115
	reserved_keyword:  ESCAPE.    (368)

	.  reduce 368 (src line 1764)


state 116
	reserved_keyword:  EXISTS.    (369)

	.  reduce 369 (src line 1765)


state 117
	reserved_keyword:  EXPLAIN.    (370)

	.  reduce 370 (src line 1766)


state 118
	reserved_keyword:  FALSE.    (371)

	.  reduce 371 (src line 1767)


state 119
	reserved_keyword:  FOR.    (372)

	.  reduce 372 (src line 1768)


state 120
	reserved_keyword:  FORCE.    (373)

	.  reduce 373 (src line 1769)


state 121
	reserved_keyword:  FROM.    (374)

	.  reduce 374 (src line 1770)


state 122
	reserved_keyword:  GROUP.    (375)

	.  reduce 375 (src line 1771)


state 123
	reserved_keyword:  HAVING.    (376)

	.  reduce 376 (src line 1772)


state 124
	reserved_keyword:  IF.    (377)

	.  reduce 377 (src line 1773)


state 125
	reserved_keyword:  IGNORE.    (378)

	.  reduce 378 (src line 1774)


state 126
	reserved_keyword:  IN.    (379)

	.  reduce 379 (src line 1775)


state 127
	reserved_keyword:  INDEX.    (380)

	.  reduce 380 (src line 1776)


state 128
	reserved_keyword:  INNER.    (381)

	.  reduce 381 (src line 1777)


state 129
	reserved_keyword:  INSERT.    (382)

	.  reduce 382 (src line 1778)


state 130
	reserved_keyword:  INTERVAL.    (383)

	.  reduce 383 (src line 1779)


state 131
	reserved_keyword:  INTO.    (384)

	.  reduce 384 (src line 1780)


state 132
	reserved_keyword:  IS.    (385)

	.  reduce 385 (src line 1781)


state 133
	reserved_keyword:  JOIN.    (386)

	.  reduce 386 (src line 1782)


state 134
	reserved_keyword:  KEY.    (387)

	.  reduce 387 (src line 1783)


state 135
	reserved_keyword:  LEFT.    (388)

	.  reduce 388 (src line 1784)


state 136
	reserved_keyword:  LIKE.    (389)

	.  reduce 389 (src line 1785)


state 137
	reserved_keyword:  LIMIT.    (390)

	.  reduce 390 (src line 1786)


state 138
	reserved_keyword:  LOCALTIME.    (391)

	.  reduce 391 (src line 1787)


state 139
	reserved_keyword:  LOCALTIMESTAMP.    (392)

	.  reduce 392 (src line 1788)


state 140
	reserved_keyword:  LOCK.    (393)

	.  reduce 393 (src line 1789)


state 141
	reserved_keyword:  MATCH.    (394)

	.  reduce 394 (src line 1790)


state 142
	reserved_keyword:  MOD.    (395)

	.  reduce 395 (src line 1791)


state 143
	reserved_keyword:  NATURAL.    (396)

	.  reduce 396 (src line 1792)


state 144
	reserved_keyword:  NEXT.    (397)

	.  reduce 397 (src line 1793)


state 145
	reserved_keyword:  NOT.    (398)

	.  reduce 398 (src line 1794)


state 146
	reserved_keyword:  NULL.    (399)

	.  reduce 399 (src line 1795)


state 147
	reserved_keyword:  ON.    (400)

	.  reduce 400 (src line 1796)


state 148
	reserved_keyword:  OR.    (401)

	.  reduce 401 (src line 1797)


state 149
	reserved_keyword:  ORDER.    (402)

	.  reduce 402 (src line 1798)


state 150
	reserved_keyword:  OUTER.    (403)

	.  reduce 403 (src line 1799)


state 151
	reserved_keyword:  REGEXP.    (404)

	.  reduce 404 (src line 1800)


state 152
	reserved_keyword:  RENAME.    (405)

	.  reduce 405 (src line 1801)


state 153
	reserved_keyword:  REPLACE.    (406)

	.  reduce 406 (src line 1802)


state 154
	reserved_keyword:  RIGHT.    (407)

	.  reduce 407 (src line 1803)


state 155
	reserved_keyword:  SELECT.    (408)

	.  reduce 408 (src line 1804)


state 156
	reserved_keyword:  SEPARATOR.    (409)

	.  reduce 409 (src line 1805)


state 157
	reserved_keyword:  SET.    (410)

	.  reduce 410 (src line 1806)


state 158
	reserved_keyword:  VITESS_KEYSPACES.    (411)

	.  reduce 411 (src line 1807)


state 159
	reserved_keyword:  VITESS_SHARDS.    (412)

	.  reduce 412 (src line 1808)


state 160
	reserved_keyword:  VSCHEMA_TABLES.    (413)

	.  reduce 413 (src line 1809)


state 161
	reserved_keyword:  SHOW.    (414)

	.  reduce 414 (src line 1810)


state 162
	reserved_keyword:  STRAIGHT_JOIN.    (415)

	.  reduce 415 (src line 1811)


state 163
	reserved_keyword:  TABLE.    (416)

	.  reduce 416 (src line 1812)


state 164
	reserved_keyword:  TABLES.    (417)

	.  reduce 417 (src line 1813)


state 165
	reserved_keyword:  THEN.    (418)

	.  reduce 418 (src line 1814)


state 166
	reserved_keyword:  TO.    (419)

	.  reduce 419 (src line 1815)


state 167
	reserved_keyword:  TRUE.    (420)

	.  reduce 420 (src line 1816)


state 168
	reserved_keyword:  UNION.    (421)

	.  reduce 421 (src line 1817)


state 169
	reserved_keyword:  UNIQUE.    (422)

	.  reduce 422 (src line 1818)


state 170
	reserved_keyword:  UPDATE.    (423)

	.  reduce 423 (src line 1819)


state 171
	reserved_keyword:  USE.    (424)

	.  reduce 424 (src line 1820)


state 172
	reserved_keyword:  USING.    (425)

	.  reduce 425 (src line 1821)


state 173
	reserved_keyword:  UTC_DATE.    (426)

	.  reduce 426 (src line 1822)


state 174
	reserved_keyword:  UTC_TIME.    (427)

	.  reduce 427 (src line 1823)


state 175
	reserved_keyword:  UTC_TIMESTAMP.    (428)

	.  reduce 428 (src line 1824)


state 176
	reserved_keyword:  VALUES.    (429)

	.  reduce 429 (src line 1825)


state 177
	reserved_keyword:  WHEN.    (430)

	.  reduce 430 (src line 1826)


state 178
	reserved_keyword:  WHERE.    (431)

	.  reduce 431 (src line 1827)


state 179
	non_reserved_keyword:  VIEW.    (446)

	.  reduce 446 (src line 1851)


state 180
	use_statement:  USE table_id.    (54)

	.  reduce 54 (src line 460)


state 181
	table_id:  ID.    (337)

	.  reduce 337 (src line 1711)


state 182
	table_id:  non_reserved_keyword.    (338)

	.  reduce 338 (src line 1716)


state 183
	other_statement:  DESC force_eof.    (55)

	.  reduce 55 (src line 466)


state 184
	other_statement:  DESCRIBE force_eof.    (56)

	.  reduce 56 (src line 471)


state 185
	other_statement:  EXPLAIN force_eof.    (57)

	.  reduce 57 (src line 475)


state 186
	other_statement:  REPAIR force_eof.    (58)

	.  reduce 58 (src line 479)


state 187
	other_statement:  OPTIMIZE force_eof.    (59)

	.  reduce 59 (src line 483)


state 188
	other_statement:  TRUNCATE force_eof.    (60)

	.  reduce 60 (src line 487)


state 189
	union_lhs:  select_statement.    (21)
	union_lhs:  openb select_statement.closeb 

	')'  shift 238
	.  reduce 21 (src line 271)

	closeb  goto 237

state 190
	select_statement:  base_select order_by_opt limit_opt.lock_opt 
	lock_opt: .    (284)

	FOR  shift 240
	LOCK  shift 241
	.  reduce 284 (src line 1507)

	lock_opt  goto 239

state 191
	limit_opt:  LIMIT.expression 
	limit_opt:  LIMIT.expression ',' expression 
	limit_opt:  LIMIT.expression OFFSET expression 
